Small style change to avoid the jump. Some fix for IE and Edge.

--- a/src/components/breadcrumbs/breadcrumbs.scss
+++ b/src/components/breadcrumbs/breadcrumbs.scss
@@ -26,12 +26,12 @@ gtx-breadcrumbs {
         font-size: 25px;
         vertical-align: top;
         -webkit-font-smoothing: antialiased;
-        margin: 0 0 0 8px;
+        margin: 0 0 0 12px;
     }
 
     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
         div a.breadcrumb:not(.last):nth-child(3)::after {
-            margin: 3.7px 0 0 8px
+            margin: 3.7px 0 0 12px
         }
     }
 
@@ -57,6 +57,7 @@ gtx-breadcrumbs {
     .multiline .ellipsis {
         pointer-events: auto;
         cursor: pointer;
+        margin-right: 7px;
     }
 
     .nav-wrapper:not(.multiline):not(.multilineExpanded) .inner-wrapper {
@@ -67,7 +68,6 @@ gtx-breadcrumbs {
     }
 
     .lastPart {
-        margin-left: 7px;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
